--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
   top: 0;
   left: 0;
   height: 20px;
-  width: 100%;
+  width: 150%;
   position: fixed;
   background-color: var(--white);
   z-index: 90;
@@ -36,7 +36,7 @@
 .border-right {
   top: 0;
   right: 0;
-  height: 100%;
+  height: 150%;
   width: 20px;
   position: fixed;
   background-color: var(--white);
@@ -47,7 +47,7 @@
   bottom: 0;
   left: 0;
   height: 20px;
-  width: 100%;
+  width: 150%;
   position: fixed;
   background-color: var(--white);
   z-index: 90;
@@ -56,7 +56,7 @@
 .border-left {
   top: 0;
   left: 0;
-  height: 100%;
+  height: 150%;
   width: 20px;
   position: fixed;
   background-color: var(--white);
@@ -270,6 +270,7 @@ main {
 
 .bio {
   padding: 0 10px;
+  text-align: center;
 }
 
 .image-viewer {
@@ -402,6 +403,7 @@ main {
     flex-direction: column;
     max-width: fit-content;
     max-height: 0px;
+    margin-top: 5px;
   }
 
   .menu-child, .menu-main, .menu-wrap {
@@ -424,9 +426,6 @@ main {
 @media only screen and (max-width: 650px) {
   * {
     cursor: auto;
-  }
-  .cursor {
-    display: none;
   }
 
   a, .image-preview {
