--- a/css/styles.css
+++ b/css/styles.css
@@ -79,14 +79,16 @@ body {
   position: fixed;
   right: 20px;
   top: 20px;
-  margin: 15px 10px 0 0;
+  margin: 5px 5px 0 0;
   z-index: 98;
   mix-blend-mode: difference;
   filter: contrast(2);
+  display: flex;
+  align-items: center;
 }
 
 .nav-main a {
-  padding: 10px 0;
+  padding: 10px 5px;
 }
 
 a {
