--- a/css/styles.css
+++ b/css/styles.css
@@ -452,3 +452,21 @@ main {
     max-width: 100%;
   }
 }
+
+@media only screen and (max-height: 670px) {
+  .self img {
+    max-height: 90%;
+  }
+}
+
+@media only screen and (max-height: 670px) and (max-width: 850px) {
+  .self img {
+    max-height: 80%;
+  }
+}
+
+@media only screen and (max-height: 670px) and (max-width: 465px) {
+  .self img {
+    max-height: 70%;
+  }
+}
