--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,10 @@ body {
   font-weight: 400;
 }
 
+img {
+  user-select: none;
+}
+
 a {
   color: var(--gray);
   text-decoration: none;
@@ -505,7 +509,7 @@ nav svg {
   visibility: visible;
   opacity: 1;
 }
-
+/*
 .zoom {
   width: 100vw;
   height: 100vh;
@@ -525,29 +529,57 @@ nav svg {
   margin: 40px 0;
   image-rendering: auto !important;
 }
+*/
+
+.image-zoom {
+  transition: var(--transition);
+  max-width: calc(100vw - 20px);
+  max-height: calc(100vh - 100px);
+  object-fit: contain;
+  padding: 10px;
+  image-rendering: auto !important;
+  z-index: 110;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 .image-zoom.change {
   filter: saturate(70%) brightness(45%) contrast(75%);
   opacity: 0;
 }
 
-.image-zoom, .viewer-previous, .viewer-next {
-  display: flex;
-}
-
-.viewer-next {
-  justify-content: flex-end;
-}
-
+/*
 .viewer-previous, .viewer-next {
+  display: flex;
   width: 50vw;
   height: 100vh;
   align-items: center;
   z-index: 1;
 }
 
+.viewer-next {
+  justify-content: flex-end;
+}
+*/
+
+.viewer-navigation {
+  width: 100vw;
+}
+
+.viewer-previous, .viewer-next {
+  position: absolute;
+  top: 50vh;
+  padding: 25px;
+  transform: translateY(-50%);
+}
+
+.viewer-next {
+  right: 0px;
+}
+
 .nav-viewer {
-  display: flex;
   z-index: 111;
 }
 
@@ -561,10 +593,6 @@ nav svg {
 .viewer-menu svg {
   margin: 12.5px 30px;
   fill: var(--white);
-}
-
-.viewer-close {
-  padding: 10px;
 }
 
 .viewer-previous a {
@@ -976,6 +1004,10 @@ li#six::before {
 
   a, .image-preview {
     cursor: pointer;
+  }
+
+  #noise-viewer {
+    pointer-events: all;
   }
 
   .nav-links {
