--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@
 
 html {
   scroll-behavior: smooth;
+  scrollbar-width: none;
 }
 
 
@@ -421,7 +422,7 @@ nav svg {
 }
 
 .image-preview:hover {
-  filter: none;
+  filter: saturate(100%) brightness(100%) contrast(85%);
 }
 
 .column-small {
@@ -546,7 +547,7 @@ nav svg {
 }
 
 .image-zoom.change {
-  filter: saturate(70%) brightness(45%) contrast(75%);
+  filter: saturate(70%) brightness(50%) contrast(80%);
   opacity: 0;
 }
 
