--- a/css/styles.css
+++ b/css/styles.css
@@ -545,6 +545,7 @@ footer {
   bottom: 10px;
   width: 100vw;
   justify-content: center;
+  transition: var(--transition);
 }
 
 .image-zoom {
@@ -570,12 +571,14 @@ footer {
   transform: translate(-50%, -50%);
   padding: 0 40px;
   padding-bottom: var(--zoom-paragraph-height);
+  transition: var(--transition);
 }
 
 .image-zoom p {
   padding: 10px 50px;
   text-align: center;
   z-index: 1;
+  transition: var(--transition);
 }
 
 .change .image-zoom {
@@ -967,6 +970,14 @@ input.required::placeholder, textarea.required::placeholder {
     background: linear-gradient(to left, var(--gradient));
     position: absolute;
     left: -20px;
+  }
+
+  .nav-viewer, .image-zoom p {
+    margin-bottom: 50px
+  }
+
+  .image-zoom img {
+    max-height: calc(100% - 200px);
   }
 }
 
